--- a/site_ViveBio/public/css/all.css
+++ b/site_ViveBio/public/css/all.css
@@ -117,6 +117,35 @@
     width: 250px;
     margin-bottom: 40px;
 }
+.productAll .add_product_cart{
+    display: inline-flex;
+    gap: 15px;
+    background-color: var(--verdeClaro-Opaco);
+    margin-right: 10px;
+    height: 40px;
+    width: 45px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    border: solid 1px white;
+    color:white;
+    text-shadow: 0 0 2px black;
+    font-size: 20px;
+}
+
+.productAll .icons__hover:hover {
+    color: var(--verdeFuerte);
+    background-color: white;
+    border: 1px solid var(--verdeFuerte);
+}
+
+.cart_barra {
+    display: none;
+    position: absolute;
+    font-size: 24px;
+    margin-top: -23px;
+    margin-left: -4px;
+}
 
 
 .productAll .estilo-c .img-container .promo {
